<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_background">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/textViewInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/white"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_ac"
            android:theme="@style/ButtonStyleSign" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_c"
            android:theme="@style/ButtonStyleSign" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_percent"
            android:theme="@style/ButtonStyleSign" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_disagree"
            android:theme="@style/ButtonStyleSign" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_7"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_8"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_9"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_multiply"
            android:theme="@style/ButtonStyleSign" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_4"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_5"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_6"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_minus"
            android:theme="@style/ButtonStyleSign" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_1"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_2"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_3"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_plus"
            android:theme="@style/ButtonStyleSign" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/symbol_0"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_dot"
            android:theme="@style/ButtonStyleNumbers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/symbol_equal"
            android:theme="@style/ButtonStyleSign" />
    </TableRow>
</TableLayout>

